--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="bg-[#e1e1e1] w-full h-[calc(100vh-63px)]">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
