--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,16 @@
 <header class="drop-shadow-[0_1x_2px_rgba(0,0,0,0.05)] max-w-full h-[63px] bg-white">
-
+  <nav>
+    <ul class="flex justify-between place-items-center pt-[19px]">
+      <li class="pl-[16px]">
+        <a href="#">
+          <img src="./../../../assets/icons/logo.svg" alt="">
+        </a>
+      </li>
+      <li class="pr-[24px]">
+        <a href="#">
+          <input type="image" src="./../../../assets/icons/heart-filled.svg" alt="">
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
