pkmn list and header done

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,12 +3,13 @@
     <ul class="flex justify-between place-items-center pt-[19px]">
       <li class="pl-[16px]">
         <a href="#">
-          <img src="./../../../assets/icons/logo.svg" alt="">
+          <img src="/assets/icons/logo.svg" alt="">
         </a>
       </li>
       <li class="pr-[24px]">
         <a href="#">
-          <input type="image" src="./../../../assets/icons/heart-filled.svg" alt="">
+          <img src="/assets/icons/heart-filled.svg" alt="">
+          <div class="w-6 h-6 bg-[#EF4444] rounded-full absolute top-2 right-2"></div>
         </a>
       </li>
     </ul>
