pkm list complete and full responsive!!!

--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-<div class="bg-[#e1e1e1] w-full min-h-[calc(100vh-63px)]">
-  <router-outlet></router-outlet>
+<div class="bg-[#e1e1e1] w-full min-h-[calc(100vh-63px)] flex justify-center">
+  <div class="max-w-[1366px] w-full">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <app-footer></app-footer>
