--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,15 +1,15 @@
-<header class="drop-shadow-[0_1x_2px_rgba(0,0,0,0.05)] max-w-full h-[63px] bg-white">
-  <nav>
+<header class="drop-shadow-[0_1x_2px_rgba(0,0,0,0.05)] max-w-full h-[63px] bg-white flex justify-center">
+  <nav class="max-w-[1366px] w-full">
     <ul class="flex justify-between place-items-center pt-[19px]">
       <li class="pl-[16px]">
         <a href="#">
-          <img src="/assets/icons/logo.svg" alt="">
+          <lib-pkm-top-bar [logo]="'/assets/icons/logo.svg'"></lib-pkm-top-bar>
         </a>
       </li>
       <li class="pr-[24px]">
         <a href="#">
-          <img src="/assets/icons/heart-filled.svg" alt="">
-          <div class="w-6 h-6 bg-[#EF4444] rounded-full absolute top-2 right-2"></div>
+          <img src="/assets/icons/heart-filled.svg" alt="Pokemones Favoritos">
+          <div class="w-6 h-6 bg-[#EF4444] rounded-full absolute"></div>
         </a>
       </li>
     </ul>
