--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,6 @@
 //   padding: 0;
 // }
 
-// html {
-//   font-size: 62.5%;
-// }
+html {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
