--- a/src/app/pages/pkm-list/pkm-list.component.html
+++ b/src/app/pages/pkm-list/pkm-list.component.html
@@ -1,27 +1,17 @@
-<div>
-  <div class="px-4 pt-[19px] sm:flex sm:justify-between">
-    <h1 class="font-bold text-[32px] leading-[42.56px] pb-[18px]">Pokemones</h1>
+<div class="sm-desktop:px-[77px]">
+  <div class="px-4 pt-[19px] tablet:flex tablet:justify-between tablet:pt-[25px]">
+    <h1 class="font-bold text-[32px] leading-[42.56px] pb-[18px] tablet:pb-0 sm-desktop:pb-0">Pokemones</h1>
     <div class="flex">
       <app-pkm-search></app-pkm-search>
-      <button class="w-[93px] h-[40px] bg-black rounded-lg ml-2"></button>
     </div>
   </div>
-  <div class="grid grid-cols-12 gap-4 p-4">
-    <div class="col-span-6 lg:col-span-4" *ngFor="let pkmn of addPkm" >
-      <div class="relative h-[206px] py-4 px-2 rounded-lg bg-white flex flex-col sm:flex-row sm:h-[130px]">
-        <lib-pkm-fav-button class="absolute top-2.5 right-2.5" [checkIcon]="'/assets/icons/heart.svg'"></lib-pkm-fav-button>
-        <div class="flex justify-center sm:justify-start">
-          <img class="w-24 h-24 sm:mx-7" [src]="pkmn.sprites.other['official-artwork'].front_default" alt="">
-        </div>
-        <div class="pt-1 sm:pt-2 pb-4">
-          <p class="font-normal text-[12px] leading-[15.96px]">{{addLeadingZeros(pkmn.id, 4)}}</p>
-          <h2 class="font-bold text-[16px] leading-[21.28px]">{{firstLetterUpperCase(pkmn.name)}}</h2>
-          <div class="inline-block bg-[#E5E7EB] px-2 py-1 rounded mt-2 mr-1" *ngFor="let type of pkmn.types">
-             <p class="font-normal text-[14px] leading-[19px]">{{firstLetterUpperCase(type.type.name)}}</p>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="grid grid-cols-12 gap-4 p-4 tablet:pt-[27px] sm-desktop:pt-[25px]">
+    <ng-container  *ngFor="let pkmn of addPkm">
+      <app-pkm-cards class="col-span-6 desktop:col-span-4" [pkm]="pkmn"></app-pkm-cards>
+    </ng-container>
+  </div>
+  <div class="flex justify-center px-4 pb-[22px]">
+    <button class="w-[328px] h-[40px] bg-black rounded-lg"></button>
   </div>
 </div>
 
