--- a/src/app/shared/components/pkm-search/pkm-search.component.html
+++ b/src/app/shared/components/pkm-search/pkm-search.component.html
@@ -1,2 +1,2 @@
 <input class="w-[227px] h-10 rounded-lg pl-[13px] font-normal text-[16px] leading-[21.28px]" type="text" placeholder="Busca un pokemon">
-
+<lib-pkm-button></lib-pkm-button>
