--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,9 +7,11 @@
         </a>
       </li>
       <li class="pr-[24px]">
-        <a [routerLink]="'/pkm-favorites'">
+        <a class="relative" [routerLink]="'/pkm-favorites'">
           <img src="/assets/icons/heart-filled.svg" alt="Pokemones Favoritos">
-          <div class="w-6 h-6 bg-[#EF4444] rounded-full absolute"></div>
+          <div class="w-6 h-6 bg-[#EF4444] rounded-full absolute top-[-12px] right-[-14px] flex justify-center items-center">
+            <p>1</p>
+          </div>
         </a>
       </li>
     </ul>
