--- a/src/app/pages/pkm-details/pkm-details.component.html
+++ b/src/app/pages/pkm-details/pkm-details.component.html
@@ -2,22 +2,26 @@
   <div class="pt-6 px-[25px]">
     <app-pkm-back></app-pkm-back>
   </div>
-  <div class="pt-2 pb-[50px] px-4">
+  <div class="pt-2 pb-[50px] px-4 flex flex-col items-center gap-4 tablet:gap-[46px] sm-desktop:flex-row sm-desktop:justify-center sm-desktop:pt-[46px] sm-desktop:gap-[248px]">
     <div class="flex justify-center">
       <img class="w-[222px] h-[222px]" [src]="pkmDetails?.sprites?.other?.['official-artwork']?.front_default" alt="">
     </div>
-    <div class="bg-white px-4 pt-4 pb-6">
-      <h2 class="font-bold text-[32px] leading-[42.56px]">{{pkmDetails?.name| titlecase}}</h2>
-      <div class="inline-block bg-[#E5E7EB] px-2 py-1 rounded mt-2 mr-1" *ngFor="let type of pkmDetails?.types">
-        <p class="font-normal text-[14px] leading-[19px]">{{type.type.name | titlecase}}</p>
+    <div class="bg-white px-4 pt-4 pb-6 rounded-2xl max-w-[480px]">
+      <div class="flex flex-col items-center gap-4">
+        <h2 class="font-bold text-[32px] leading-[42.56px]">{{pkmDetails?.name| titlecase}}</h2>
+        <div class="flex flex-row">
+          <div class="bg-[#E5E7EB] px-2 py-1 rounded mr-1" *ngFor="let type of pkmDetails?.types">
+            <p class="font-normal text-[14px] leading-[19px]">{{type.type.name | titlecase}}</p>
+          </div>
+        </div>
       </div>
-      <div>
+      <div class="flex flex-col justify-start py-4 gap-4">
         <p>{{description}}</p>
         <p class="font-normal text-[16px] leading-[21px]">ID: {{pkmDetails?.id}}</p>
         <p class="font-normal text-[16px] leading-[21px]">Altura: {{pkmDetails?.height}} ft</p>
         <p class="font-normal text-[16px] leading-[21px]">Peso: {{pkmDetails?.weight}} lbs</p>
       </div>
-      <button class="w-[300px] h-[40px] bg-black rounded-lg"></button>
+      <button class="w-full h-[40px] bg-black rounded-lg"></button>
     </div>
   </div>
 </div>
