--- a/src/app/shared/components/pkm-back/pkm-back.component.html
+++ b/src/app/shared/components/pkm-back/pkm-back.component.html
@@ -1,3 +1,3 @@
 <a onclick="history.back()">
-  <img class="w-6 h-6" src="/assets/icons/arrow-left.svg" alt="">
+  <img class="w-6 h-6 cursor-pointer" src="/assets/icons/arrow-left.svg" alt="">
 </a>
