--- a/projects/rkt-lib/src/lib/components/pkm-button/pkm-button.component.css
+++ b/projects/rkt-lib/src/lib/components/pkm-button/pkm-button.component.css
@@ -15,6 +15,10 @@
   border-radius: 8px;
 }
 
+.primary:hover {
+  background-color: #f77373;
+}
+
 /* .default {
   display: flex;
   flex-direction: row;
