--- a/projects/rkt-lib/src/lib/components/pkm-button/pkm-button.component.css
+++ b/projects/rkt-lib/src/lib/components/pkm-button/pkm-button.component.css
@@ -13,13 +13,14 @@
   text-transform: uppercase;
   color: white;
   border-radius: 8px;
+  width: 100%;
 }
 
 .primary:hover {
   background-color: #f77373;
 }
 
-/* .default {
+.default {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -32,6 +33,11 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  color: white;
+  color: black;
   border-radius: 8px;
-} */
+  width: 100%;
+}
+
+.default:hover {
+  background-color: #a8a9ad;
+}
