--- a/src/app/pages/pkm-favorites/pkm-favorites.component.html
+++ b/src/app/pages/pkm-favorites/pkm-favorites.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="grid grid-cols-12 gap-4 p-4 tablet:pt-[27px] sm-desktop:pt-[25px]">
     <ng-container *ngFor="let pkm of pokemonFavList">
-      <app-pkm-cards class="col-span-6 desktop:col-span-4" [pkm]="pkm" (click)="refresh()"></app-pkm-cards>
+      <app-pkm-cards class="col-span-6 desktop:col-span-4" [pkm]="pkm"></app-pkm-cards>
     </ng-container>
   </div>
 </div>
