--- a/src/app/shared/components/pkm-skeleton/pkm-skeleton.component.html
+++ b/src/app/shared/components/pkm-skeleton/pkm-skeleton.component.html
@@ -1,12 +1,28 @@
-<div class="h-[206px] tablet:h-[130px] bg-white rounded-lg mx-auto mt-20">
+<div class="relative h-[206px] py-4 px-2 rounded-lg bg-white flex flex-col tablet:flex-row tablet:h-[130px]">
   <div class="flex animate-pulse flex-row items-center h-full justify-start space-x-5 pl-8">
-    <div class=" bg-gray-300 w-24 h-24  rounded-lg ">
+    <div class=" bg-gray-300 w-24 h-24 tablet:mx-7 cursor-pointer rounded-lg ">
     </div>
-        <div class="flex flex-col space-y-3">
-        <div class="w-36 bg-gray-300 h-6 rounded-md ">
-        </div>
-        <div class="w-24 bg-gray-300 h-6 rounded-md ">
-        </div>
+    <div class="flex flex-col space-y-3">
+      <div class="max-w-36 bg-gray-300 h-6 rounded-md ">
+      </div>
+      <div class="w-24 bg-gray-300 h-6 rounded-md ">
+      </div>
     </div>
   </div>
 </div>
+
+<!-- <div *ngIf="pkm">
+  <div class="relative h-[206px] py-4 px-2 rounded-lg bg-white flex flex-col tablet:flex-row tablet:h-[130px]">
+    <lib-pkm-fav-button class="absolute top-2.5 right-2.5" [checked]="pkm.isFavorite" (isChecked)="changeFavorites($event)"></lib-pkm-fav-button>
+    <div class="flex justify-center tablet:justify-start" (click)="addPkmStorage(pkm)" [routerLink]="'/pkm-details/' + pkm.id">
+      <img class="w-24 h-24 tablet:mx-7 cursor-pointer" [src]="pkm.sprites.other['official-artwork'].front_default" alt="">
+    </div>
+    <div class="pt-1 tablet:pt-2 tablet:pb-4">
+      <p class="font-normal text-[12px] leading-[15.96px]">{{pkm.id | leadingZeros:4}}</p>
+      <h2 class="font-bold text-[16px] leading-[21.28px]">{{pkm.name | titlecase}}</h2>
+      <div class="inline-block bg-[#E5E7EB] px-2 py-1 rounded mt-2 mr-1" *ngFor="let type of pkm.types">
+          <p class="font-normal text-[14px] leading-[19px]">{{type.type.name | titlecase}}</p>
+      </div>
+    </div>
+  </div>
+</div> -->
