--- a/src/app/shared/components/pkm-skeleton/pkm-skeleton.component.html
+++ b/src/app/shared/components/pkm-skeleton/pkm-skeleton.component.html
@@ -1,11 +1,11 @@
 <div class="relative h-[206px] py-4 px-2 rounded-lg bg-white flex flex-col tablet:flex-row tablet:h-[130px]">
-  <div class="flex animate-pulse flex-row items-center h-full justify-start space-x-5 pl-8">
+  <div class="flex flex-col justify-center tablet:flex-row tablet:justify-start animate-pulse  items-center h-full space-x-5 ">
     <div class=" bg-gray-300 w-24 h-24 tablet:mx-7 cursor-pointer rounded-lg ">
     </div>
     <div class="flex flex-col space-y-3">
-      <div class="max-w-36 bg-gray-300 h-6 rounded-md ">
+      <div class="max-w-36 bg-gray-300 h-6 rounded-lg ">
       </div>
-      <div class="w-24 bg-gray-300 h-6 rounded-md ">
+      <div class="w-24 bg-gray-300 h-6 rounded-lg ">
       </div>
     </div>
   </div>
