--- a/src/app/shared/components/pkm-search/pkm-search.component.html
+++ b/src/app/shared/components/pkm-search/pkm-search.component.html
@@ -2,7 +2,8 @@
   <input #inputSearch
   class="w-[227px] h-10 rounded-lg pl-[13px] font-normal text-[16px] leading-[21.28px] outline-none"
   type="text"
-  placeholder="Busca un pokemon">
+  placeholder="Busca un pokemon"
+  >
   <lib-pkm-button class="ml-2" (buttonActions)="onSearch(inputSearch.value)" [text]="'buscar'" [pkmType]="'primary'"></lib-pkm-button>
 </div>
 
