--- a/src/app/shared/components/pkm-cards/pkm-cards.component.html
+++ b/src/app/shared/components/pkm-cards/pkm-cards.component.html
@@ -4,7 +4,7 @@
     <div class="flex justify-center tablet:justify-start" (click)="addPkmStorage(pkm)" [routerLink]="'/pkm-details/' + pkm.id">
       <img class="w-24 h-24 tablet:mx-7 cursor-pointer" [src]="pkm.sprites.other['official-artwork'].front_default" alt="">
     </div>
-    <div class="pt-1 tablet:pt-2 tablet:pb-4">
+    <div class="pt-1 tablet:pt-2 tablet:pb-4 cursor-pointer" [routerLink]="'/pkm-details/' + pkm.id">
       <p class="font-normal text-[12px] leading-[15.96px]">{{pkm.id | leadingZeros:4}}</p>
       <h2 class="font-bold text-[16px] leading-[21.28px]">{{pkm.name | titlecase}}</h2>
       <div class="inline-block bg-[#E5E7EB] px-2 py-1 rounded mt-2 mr-1" *ngFor="let type of pkm.types">
