--- a/src/app/pages/pkm-details/pkm-details.component.html
+++ b/src/app/pages/pkm-details/pkm-details.component.html
@@ -21,7 +21,7 @@
         <p class="font-normal text-[16px] leading-[21px]"><span class="font-bold">Altura:</span> {{pkmDetails?.height}}</p>
         <p class="font-normal text-[16px] leading-[21px]"><span class="font-bold">Peso:</span> {{pkmDetails?.weight}}</p>
       </div>
-      <lib-pkm-button class="w-full" [text]="'agregar a favoritos'" [pkmType]="'primary'"></lib-pkm-button>
+      <lib-pkm-button class="w-full" [text]="textButton" [pkmType]="'primary'" (buttonActions)="getFavoritesActButton()"></lib-pkm-button>
     </div>
   </div>
 </div>
