--- a/src/app/shared/components/pkm-skeleton/pkm-skeleton.component.html
+++ b/src/app/shared/components/pkm-skeleton/pkm-skeleton.component.html
@@ -1,15 +1,16 @@
 <div class="relative h-[206px] py-4 px-2 rounded-lg bg-white flex flex-col tablet:flex-row tablet:h-[130px]">
   <div class="flex flex-col justify-center tablet:flex-row tablet:justify-start animate-pulse  items-center h-full space-y-2">
-    <div class=" bg-gray-300 w-24 h-24 tablet:mx-7 cursor-pointer rounded-lg ">
+    <div class="w-24 h-24 tablet:mx-7">
+      <img class="fill-white" src="./../../../../assets/icons/pokeball.svg" alt="">
     </div>
     <div class="flex flex-col justify-center space-y-2">
-      <div class="max-w-36 bg-gray-300 h-6 rounded-lg ">
+      <div class="w-28 bg-[#E5E7EB] h-6 rounded-lg ">
       </div>
-      <div class="w-24 bg-gray-300 h-6 rounded-lg ">
+      <div class="w-28 bg-[#E5E7EB] h-6 rounded-lg ">
       </div>
     </div>
   </div>
-  <div class="w-6 bg-gray-300 h-6 rounded-full absolute top-2.5 right-2.5">
+  <div class="w-6 bg-[#E5E7EB] h-6 rounded-full absolute top-2.5 right-2.5">
   </div>
 </div>
 
