--- a/projects/rkt-lib/src/lib/components/pkm-fav-button/pkm-fav-button.component.html
+++ b/projects/rkt-lib/src/lib/components/pkm-fav-button/pkm-fav-button.component.html
@@ -1,9 +1,9 @@
-<label>
-  <input (change)="changeCheck($event)" [(ngModel)]="checked" type="checkbox" name="" value="" hidden/>
-  <svg *ngIf="!checked" class = "my-image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+<label class="fav">
+  <input (change)="changeCheck($event)" class="fav__input" [(ngModel)]="checked" type="checkbox" name="" value="" hidden/>
+  <svg *ngIf="!checked" class = "fav__heart" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
     <path d="M12 20c-2.205-.48-9-4.24-9-11a5 5 0 0 1 9-3 5 5 0 0 1 9 3c0 6.76-6.795 10.52-9 11Zm0-2c3.12-.93 7-4.805 7-9a3 3 0 0 0-3-3c-1.305 0-2.638.833-4 2.5C10.638 6.833 9.305 6 8 6a3 3 0 0 0-3 3c0 4.195 3.88 8.07 7 9Z" clip-rule="evenodd" class="cls-1"/>
   </svg>
-  <svg *ngIf="checked" class = "my-image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+  <svg *ngIf="checked" class = "fav__heart" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
     <path d="M12 20c-2.205-.48-9-4.24-9-11a5 5 0 0 1 9-3 5 5 0 0 1 9 3c0 6.76-6.795 10.52-9 11Z" clip-rule="evenodd"/>
   </svg>
 </label>
