--- a/projects/rkt-lib/src/lib/components/pkm-fav-button/pkm-fav-button.component.css
+++ b/projects/rkt-lib/src/lib/components/pkm-fav-button/pkm-fav-button.component.css
@@ -1,9 +1,9 @@
-.my-image:hover {
+.fav__heart:hover {
   fill:#EF4444;
   cursor:pointer;
   transform: scale(1.1);
 }
 
-input[type="checkbox"]:checked + .my-image {
+input[type="checkbox"]:checked + .fav__heart {
   fill:#EF4444;
 }
